tdf#83223: sw: fix Undo of format change of conditional para style

SwUndoFormatAttr was simply missing a case for RES_CONDTXTFMTCOLL.
Handle it the same way as an oridnary paragraph style, which seems to
work for me.

Change-Id: Ib529beb1116633e4890d5b51df39da21de485db9
(cherry picked from commit 37e936996acb4a8329fad2ec73a35f66be446e90)
Reviewed-on: https://gerrit.libreoffice.org/17428
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>